--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,23 @@
 {
-    "env": {
-        "commonjs": true,
-        "es2021": true,
-        "node": true
-    },
-    "extends": [
-        "standard"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 12
-    },
-    "rules": {
-        "no-unused-vars": "error"
-    },
-    "ignorePatterns": [
-        "*.spec.js",
-        "*.test.js",
-        "*.d.ts",
-        "dist",
-        "client",
-        "build",
-        "public"
-    ]
+  "env": {
+    "commonjs": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": ["standard"],
+  "parserOptions": {
+    "ecmaVersion": 12
+  },
+  "rules": {
+    "no-unused-vars": "error"
+  },
+  "ignorePatterns": [
+    "*.spec.js",
+    "*.test.js",
+    "*.d.ts",
+    "dist",
+    "client",
+    "build",
+    "public"
+  ]
 }
