--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "dev": "nodemon src/app.js",
     "format": "prettier --write \"**/*.{js,json,md}\"",
     "lint": "eslint . --ext .js",
-    "lint:fix": "eslint . --fix --ext .js"
+    "lint:fix": "eslint . --ext .js --fix"
   },
   "author": "Aadarsha",
   "license": "ISC",
   "husky": {
     "hooks": {
+      "pre-commit": "npm run format",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
@@ -34,7 +35,8 @@
     "mongoose": "^5.7.13",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "snazzy": "^8.0.0"
+    "snazzy": "^8.0.0",
+    "standard": "^14.3.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -49,8 +51,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.3.0",
-    "prettier": "^2.1.2",
-    "standard": "^14.3.4"
+    "prettier": "^2.1.2"
   },
   "standard": {
     "ignore": [
