--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "12.18.3",
+    "npm": "6.14.6",
+    "yarn": "1.22.4"
+  },
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
